@@ -8,6 +8,28 @@ module Nokogiri
         @html = Nokogiri::HTML.parse(File.read(HTML_FILE))
       end
 
+      def test_document_takes_config_block
+        options = nil
+        Nokogiri::HTML(File.read(HTML_FILE), HTML_FILE) do |cfg|
+          options = cfg
+          options.nonet.nowarning.dtdattr
+        end
+        assert options.nonet?
+        assert options.nowarning?
+        assert options.dtdattr?
+      end
+
+      def test_parse_takes_config_block
+        options = nil
+        Nokogiri::HTML.parse(File.read(HTML_FILE), HTML_FILE) do |cfg|
+          options = cfg
+          options.nonet.nowarning.dtdattr
+        end
+        assert options.nonet?
+        assert options.nowarning?
+        assert options.dtdattr?
+      end
+
       def test_emtpy_string_returns_empty_doc
         doc = Nokogiri::HTML('')
       end
@@ -71,7 +93,9 @@ module Nokogiri
 
       def test_parse_io
         assert doc = File.open(HTML_FILE, 'rb') { |f|
-          Document.read_io(f, nil, 'UTF-8', PARSE_NOERROR | PARSE_NOWARNING)
+          Document.read_io(f, nil, 'UTF-8',
+                           XML::ParseOptions::NOERROR | XML::ParseOptions::NOWARNING
+                          )
         }
       end
 
